<resources>
    <string name="app_name">M2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="m2">I am Anny</string>
    <string name="n">Name</string>
    <string name="a">Address</string>
    <string name="p">Phone No</string>
    <string name="c">Contact No</string>
    <string name="Pyo">Tera Pyo</string>
    <string name="Baap">Tera Baap</string>
    <string name="Jija">Tera Jija</string>
    <string name="yu">Lets Go out</string>
    <string-array name="Spinner">
        <item>Tera Baap</item>
        <item>Pyo </item>
        <item>Jija</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>